# basic_communication

./: .gitignore  CMakeLists.txt  README.md  REAMDE.md  example.json  package.xml
cfg/: Tutorials.cfg
msg/: Kreditkarte.msg
scripts/: json_talker.py  json_writer.py
src/: a.out  client.cpp  dyn_rec_client.cpp  dyn_rec_client_bool.cpp  dyn_rec_client_double.cpp  dyn_rec_server.cpp  latched_listener.cpp  latched_talker.cpp  param_cached_getter.cpp  param_setter.cpp  reference_parameter_test.cpp  regex_string_splitting.cpp  serial_interface_test.cpp  server.cpp
