<?xml version="1.0"?>
<package format="2">
  <name>basic_communication</name>
  <version>0.0.1</version>
  <description>Test environment for various communication concepts based on ROS.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rouven.reichert@stud.uni-hannover.de">Rouven Reichert</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/dynamic_reconfigure/Tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>dynamix_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy_message_converter</depend>
  <depend>std_msgs</depend>

</package>
